--- a/esp32h2-hal/Cargo.toml
+++ b/esp32h2-hal/Cargo.toml
@@ -41,6 +41,8 @@ embedded-can       = "0.4.1"
 embedded-io-async  = "0.6.0"
 embedded-hal-bus   = "0.1.0-rc.1"
 esp-backtrace      = { version = "0.9.0", features = ["esp32h2", "panic-handler", "exception-handler", "print-uart"] }
+esp-hal-embassy    = { version = "0.1.0", features = ["esp32h2"], path = "../esp-hal-embassy" }
+esp-hal-embassy-procmacros = { version = "0.1.0", path = "../esp-hal-embassy-procmacros" }
 esp-hal-smartled   = { version = "0.6.0", features = ["esp32h2"], path = "../esp-hal-smartled" }
 esp-println        = { version = "0.7.0", features = ["esp32h2"] }
 heapless           = "0.7.16"
@@ -60,7 +62,7 @@ embassy-sync       = "0.4.0"
 default              = ["rt", "vectored", "zero-rtc-bss", "embassy-integrated-timers"]
 async                = ["esp-hal-common/async"]
 debug                = ["esp-hal-common/debug"]
-defmt                = ["esp-hal-common/defmt", "esp-println/defmt"]
+defmt                = ["esp-hal-common/defmt", "esp-hal-embassy/defmt", "esp-println/defmt"]
 direct-vectoring     = ["esp-hal-common/direct-vectoring"]
 eh1                  = ["esp-hal-common/eh1"]
 interrupt-preemption = ["esp-hal-common/interrupt-preemption"]
@@ -75,19 +77,18 @@ init-data            = ["esp-hal-common/rv-init-data"]
 init-rtc-data        = ["esp-hal-common/rv-init-rtc-data"]
 
 # Embassy support
-embassy                    = ["esp-hal-common/embassy"]
-embassy-time-systick       = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
-embassy-time-timg0         = ["esp-hal-common/embassy-time-timg0",   "embassy-time/tick-hz-1_000_000"]
-embassy-executor-interrupt = ["esp-hal-common/embassy-executor-interrupt"]
-embassy-executor-thread    = ["esp-hal-common/embassy-executor-thread"]
+embassy-time-systick       = ["esp-hal-embassy/time-systimer", "embassy-time/tick-hz-16_000_000"]
+embassy-time-timg0         = ["esp-hal-embassy/time-timg0",    "embassy-time/tick-hz-1_000_000"]
+embassy-executor-interrupt = ["esp-hal-embassy/executor-interrupt"]
+embassy-executor-thread    = ["esp-hal-embassy/executor-thread"]
 
 # prefer integrated timers, but allow using the generic queue if needed
-embassy-integrated-timers = ["esp-hal-common/embassy-integrated-timers"]
-embassy-generic-queue-8   = ["esp-hal-common/embassy-generic-queue-8"]
-embassy-generic-queue-16  = ["esp-hal-common/embassy-generic-queue-16"]
-embassy-generic-queue-32  = ["esp-hal-common/embassy-generic-queue-32"]
-embassy-generic-queue-64  = ["esp-hal-common/embassy-generic-queue-64"]
-embassy-generic-queue-128 = ["esp-hal-common/embassy-generic-queue-128"]
+embassy-integrated-timers = ["esp-hal-embassy/integrated-timers"]
+embassy-generic-queue-8   = ["esp-hal-embassy/generic-queue-8"]
+embassy-generic-queue-16  = ["esp-hal-embassy/generic-queue-16"]
+embassy-generic-queue-32  = ["esp-hal-embassy/generic-queue-32"]
+embassy-generic-queue-64  = ["esp-hal-embassy/generic-queue-64"]
+embassy-generic-queue-128 = ["esp-hal-embassy/generic-queue-128"]
 
 [profile.release]
 debug = true
@@ -102,35 +103,35 @@ required-features = ["eh1"]
 
 [[example]]
 name              = "embassy_hello_world"
-required-features = ["embassy", "embassy-executor-thread"]
+required-features = ["embassy-executor-thread"]
 
 [[example]]
 name              = "embassy_multiprio"
-required-features = ["embassy", "embassy-executor-thread", "embassy-executor-interrupt"]
+required-features = ["embassy-executor-thread", "embassy-executor-interrupt"]
 
 [[example]]
 name              = "embassy_i2c"
-required-features = ["async", "embassy", "embassy-time-systick", "embassy-executor-thread"]
+required-features = ["async", "embassy-time-systick", "embassy-executor-thread"]
 
 [[example]]
 name              = "embassy_serial"
-required-features = ["async", "embassy", "embassy-executor-thread"]
+required-features = ["async", "embassy-executor-thread"]
 
 [[example]]
 name              = "embassy_spi"
-required-features = ["async", "embassy", "embassy-executor-thread"]
+required-features = ["async", "embassy-executor-thread"]
 
 [[example]]
 name              = "embassy_wait"
-required-features = ["async", "embassy", "embassy-executor-thread"]
+required-features = ["async", "embassy-executor-thread"]
 
 [[example]]
 name              = "embassy_rmt_tx"
-required-features = ["embassy", "async", "embassy-executor-thread"]
+required-features = ["async", "embassy-executor-thread"]
 
 [[example]]
 name              = "embassy_rmt_rx"
-required-features = ["embassy", "async", "embassy-executor-thread"]
+required-features = ["async", "embassy-executor-thread"]
 
 [[example]]
 name              = "interrupt_preemption"
@@ -142,20 +143,20 @@ required-features = ["direct-vectoring"]
 
 [[example]]
 name              = "embassy_i2s_sound"
-required-features = ["embassy", "async", "embassy-executor-thread"]
+required-features = ["async", "embassy-executor-thread"]
 
 [[example]]
 name              = "embassy_i2s_read"
-required-features = ["embassy", "async", "embassy-executor-thread"]
+required-features = ["async", "embassy-executor-thread"]
 
 [[example]]
 name              = "embassy_parl_io_tx"
-required-features = ["embassy", "async", "embassy-executor-thread"]
+required-features = ["async", "embassy-executor-thread"]
 
 [[example]]
 name              = "embassy_parl_io_rx"
-required-features = ["embassy", "async", "embassy-executor-thread"]
+required-features = ["async", "embassy-executor-thread"]
 
 [[example]]
 name              = "embassy_usb_serial_jtag"
-required-features = ["embassy", "async", "embassy-executor-thread"]
+required-features = ["async", "embassy-executor-thread"]
