Update `esp32s2-ulp` and `esp32s3-ulp` packages and address breaking changes

--- a/esp-ulp-riscv-hal/Cargo.toml
+++ b/esp-ulp-riscv-hal/Cargo.toml
@@ -22,17 +22,17 @@ categories = [
 ]
 
 [dependencies]
-embedded-hal      = { version = "0.2.7", features = ["unproven"] }
-procmacros        = { package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
-paste             = "1.0.14"
-esp32s2-ulp       = { git = "https://github.com/esp-rs/esp-pacs", rev = "a7066cf", package = "esp32s2-ulp", optional = true }
-esp32s3-ulp       = { git = "https://github.com/esp-rs/esp-pacs", rev = "a7066cf", package = "esp32s3-ulp", optional = true }
+embedded-hal = { version = "0.2.7", features = ["unproven"] }
+procmacros   = { package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
+paste        = "1.0.14"
+esp32s2-ulp  = { git = "https://github.com/esp-rs/esp-pacs", rev = "bb24582", optional = true }
+esp32s3-ulp  = { git = "https://github.com/esp-rs/esp-pacs", rev = "bb24582", optional = true }
 
 [dev-dependencies]
-panic-halt       = "0.2.0"
+panic-halt = "0.2.0"
 
 [features]
 default = []
 debug   = []
-esp32s2 = [ "dep:esp32s2-ulp", "procmacros/esp32s2-ulp" ]
-esp32s3 = [ "dep:esp32s3-ulp", "procmacros/esp32s3-ulp" ]
+esp32s2 = ["dep:esp32s2-ulp", "procmacros/esp32s2-ulp"]
+esp32s3 = ["dep:esp32s3-ulp", "procmacros/esp32s3-ulp"]
