--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -70,8 +70,8 @@ ufmt-write = { version = "0.1.0", optional = true }
 esp32   = { version = "0.27.0", features = ["critical-section"], optional = true }
 esp32c2 = { path = "/Users/jesse/Work/esp-pacs/esp32c2", features = ["critical-section"], optional = true }
 esp32c3 = { path = "/Users/jesse/Work/esp-pacs/esp32c3", features = ["critical-section"], optional = true }
-esp32c6 = { version = "0.8.0",  features = ["critical-section"], optional = true }
-esp32h2 = { version = "0.4.0",  features = ["critical-section"], optional = true }
+esp32c6 = { path = "/Users/jesse/Work/esp-pacs/esp32c6", features = ["critical-section"], optional = true }
+esp32h2 = { path = "/Users/jesse/Work/esp-pacs/esp32h2", features = ["critical-section"], optional = true }
 esp32s2 = { version = "0.18.0", features = ["critical-section"], optional = true }
 esp32s3 = { version = "0.22.0", features = ["critical-section"], optional = true }
 
