--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -27,32 +27,32 @@ defmt                = { version = "=0.3.5", optional = true }
 embedded-can         = { version = "0.4.1", optional = true }
 embedded-dma         = "0.2.0"
 embedded-hal         = { version = "0.2.7", features = ["unproven"] }
-embedded-hal-1       = { version = "=1.0.0-rc.1", optional = true, package = "embedded-hal" }
-embedded-hal-nb      = { version = "=1.0.0-rc.1", optional = true }
+embedded-hal-1       = { version = "=1.0.0-rc.2", optional = true, package = "embedded-hal" }
+embedded-hal-nb      = { version = "=1.0.0-rc.2", optional = true }
 embedded-io          = { version = "0.6.1", optional = true }
+enumset              = "1.1.3"
 esp-synopsys-usb-otg = { version = "0.3.2", optional = true, features = ["fs", "esp32sx"] }
 fugit                = "0.3.7"
 heapless             = "0.8"
 log                  = { version = "0.4.20", optional = true }
 nb                   = "1.1.0"
 paste                = "1.0.14"
+portable-atomic      = { version = "1.5.1", default-features = false }
 procmacros           = { version = "0.7.0", features = ["enum-dispatch", "ram"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
 strum                = { version = "0.25.0", default-features = false, features = ["derive"] }
 void                 = { version = "1.0.2", default-features = false }
 usb-device           = { version = "0.2.9", optional = true }
-enumset              = "1.1.3"
-portable-atomic              = { version = "1.5.1", default-features = false }
 
 # async
-embedded-hal-async = { version = "=1.0.0-rc.1", optional = true }
-embedded-io-async  = { version = "0.6.0", optional = true }
-embassy-executor   = { version = "0.3.2", optional = true }
-embassy-futures    = { version = "0.1.0", optional = true }
-embassy-sync       = { version = "0.4.0", optional = true }
-embassy-time       = { version = "0.1.5", optional = true, features = ["nightly"] }
+embedded-hal-async = { version = "=1.0.0-rc.2", optional = true }
+embedded-io-async  = { version = "0.6.1", optional = true }
+embassy-executor   = { version = "0.3.3", optional = true }
+embassy-futures    = { version = "0.1.1", optional = true }
+embassy-sync       = { version = "0.5.0", optional = true }
+embassy-time       = { version = "0.2.0", optional = true }
 
 # RISC-V
-esp-riscv-rt                = { version = "0.5.0", optional = true, path = "../esp-riscv-rt" }
+esp-riscv-rt = { version = "0.5.0", optional = true, path = "../esp-riscv-rt" }
 
 # Xtensa
 xtensa-lx    = { version = "0.8.0",  optional = true }
@@ -74,7 +74,7 @@ esp32s3 = { version = "0.23.0", features = ["critical-section"], optional = true
 
 [build-dependencies]
 basic-toml = "0.1.7"
-serde      = { version = "1.0.190", features = ["derive"] }
+serde      = { version = "1.0.193", features = ["derive"] }
 
 [features]
 esp32   = ["xtensa", "esp32/rt",   "procmacros/esp32",   "xtensa-lx/esp32",   "xtensa-lx-rt/esp32"]
@@ -181,3 +181,9 @@ defmt = [
     "embedded-io/defmt-03",
     "embedded-io-async?/defmt-03",
 ]
+
+[patch.crates-io]
+embassy-executor = { git = "https:/github.com/embassy-rs/embassy", rev = "3349007" }
+embassy-futures  = { git = "https:/github.com/embassy-rs/embassy", rev = "3349007" }
+embassy-sync     = { git = "https:/github.com/embassy-rs/embassy", rev = "3349007" }
+embassy-time     = { git = "https:/github.com/embassy-rs/embassy", rev = "3349007" }
