--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -25,20 +25,20 @@ categories = [
 ]
 
 [dependencies]
-esp-hal-common = { version = "0.13.0", features = ["esp32"],   path = "../esp-hal-common" }
-embassy-time   = { version = "0.1.5",  features = ["nightly"], optional = true }
+esp-hal-common = { version = "0.13.0", features = ["esp32"], path = "../esp-hal-common" }
+embassy-time   = { version = "0.2.0",  optional = true }
 
 [dev-dependencies]
 aes                = "0.8.3"
 critical-section   = "1.1.2"
 crypto-bigint      = { version = "0.5.3", default-features = false }
 embassy-executor   = { version = "0.3.2", features = ["nightly"] }
-embassy-sync       = "0.4.0"
+embassy-sync       = "0.5.0"
 embedded-graphics  = "0.8.1"
-embedded-hal-1     = { version = "=1.0.0-rc.1", package = "embedded-hal" }
-embedded-hal-async = "=1.0.0-rc.1"
+embedded-hal-1     = { version = "=1.0.0-rc.2", package = "embedded-hal" }
+embedded-hal-async = "=1.0.0-rc.2"
 embedded-io-async  = "0.6.0"
-embedded-hal-bus   = "0.1.0-rc.1"
+embedded-hal-bus   = "0.1.0-rc.2"
 esp-alloc          = "0.3.0"
 esp-backtrace      = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled   = { version = "0.6.0", features = ["esp32"], path = "../esp-hal-smartled" }
@@ -146,3 +146,9 @@ required-features = ["embassy", "async"]
 [[example]]
 name              = "embassy_i2s_read"
 required-features = ["embassy", "async"]
+
+[patch.crates-io]
+embassy-executor = { git = "https:/github.com/embassy-rs/embassy", rev = "3349007" }
+embassy-futures  = { git = "https:/github.com/embassy-rs/embassy", rev = "3349007" }
+embassy-sync     = { git = "https:/github.com/embassy-rs/embassy", rev = "3349007" }
+embassy-time     = { git = "https:/github.com/embassy-rs/embassy", rev = "3349007" }
