--- a/esp32c6-hal/Cargo.toml
+++ b/esp32c6-hal/Cargo.toml
@@ -27,7 +27,7 @@ categories = [
 
 [dependencies]
 esp-hal-common = { version = "0.13.0", features = ["esp32c6"], path = "../esp-hal-common" }
-embassy-time   = { version = "0.1.5",  features = ["nightly"], optional = true }
+embassy-time   = { version = "0.2.0", optional = true }
 
 [dev-dependencies]
 aes                = "0.8.3"
@@ -35,11 +35,11 @@ critical-section   = "1.1.2"
 crypto-bigint      = { version = "0.5.3", default-features = false}
 embassy-executor   = { version = "0.3.2", features = ["nightly"] }
 embedded-graphics  = "0.8.1"
-embedded-hal-1     = { version = "=1.0.0-rc.1", package = "embedded-hal" }
-embedded-hal-async = "=1.0.0-rc.1"
+embedded-hal-1     = { version = "=1.0.0-rc.2", package = "embedded-hal" }
+embedded-hal-async = "=1.0.0-rc.2"
 embedded-can       = "0.4.1"
 embedded-io-async  = "0.6.0"
-embedded-hal-bus   = "0.1.0-rc.1"
+embedded-hal-bus   = "0.1.0-rc.2"
 esp-backtrace      = { version = "0.9.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled   = { version = "0.6.0", features = ["esp32c6"], path = "../esp-hal-smartled" }
 esp-println        = { version = "0.7.0", features = ["esp32c6"] }
@@ -54,7 +54,7 @@ hex-literal        = "0.4.1"
 elliptic-curve     = { version = "0.13.6", default-features = false, features = ["sec1"] }
 p192               = { version = "0.13.0", default-features = false, features = ["arithmetic"] }
 p256               = { version = "0.13.2", default-features = false, features = ["arithmetic"] }
-embassy-sync       = "0.4.0"
+embassy-sync       = "0.5.0"
 
 [features]
 default              = ["rt", "vectored", "zero-rtc-bss", "embassy-integrated-timers"]
@@ -159,3 +159,9 @@ required-features = ["embassy", "async", "embassy-executor-thread"]
 [[example]]
 name              = "embassy_usb_serial_jtag"
 required-features = ["embassy", "async", "embassy-executor-thread"]
+
+[patch.crates-io]
+embassy-executor = { git = "https:/github.com/embassy-rs/embassy", rev = "3349007" }
+embassy-futures  = { git = "https:/github.com/embassy-rs/embassy", rev = "3349007" }
+embassy-sync     = { git = "https:/github.com/embassy-rs/embassy", rev = "3349007" }
+embassy-time     = { git = "https:/github.com/embassy-rs/embassy", rev = "3349007" }
