--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,15 +70,27 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@v1
         with:
-          target: riscv32imac-unknown-none-elf, riscv32imc-unknown-none-elf
+          target: riscv32imc-unknown-none-elf,riscv32imac-unknown-none-elf
           toolchain: nightly
           components: rust-src
       - uses: Swatinem/rust-cache@v2
 
-      - name: Check esp-riscv-rt (imc)
-        run: cd esp-riscv-rt/ && cargo check --target=riscv32imc-unknown-none-elf -Zbuild-std=core
-      - name: Check esp-riscv-rt (imac)
-        run: cd esp-riscv-rt/ && cargo check --target=riscv32imac-unknown-none-elf -Zbuild-std=core
+      - name: Build esp-riscv-rt (riscv32imc, no features)
+        run: cd esp-riscv-rt/ && cargo build -Zbuild-std=core --target=riscv32imc-unknown-none-elf
+      - name: Build esp-riscv-rt (riscv32imac, no features)
+        run: cd esp-riscv-rt/ && cargo build -Zbuild-std=core --target=riscv32imac-unknown-none-elf
+      - name: Build esp-riscv-rt (riscv32imc, all features)
+        run: |
+          cd esp-riscv-rt/
+          cargo build -Zbuild-std=core \
+            --target=riscv32imc-unknown-none-elf \
+            --features=direct-vectoring,interrupt-preemption,has-mie-mip,zero-bss,zero-rtc-fast-bss,init-data,init-rw-text,init-rtc-fast-data,init-rtc-fast-text
+      - name: Build esp-riscv-rt (riscv32imac, all features)
+        run: |
+          cd esp-riscv-rt/
+          cargo build -Zbuild-std=core \
+            --target=riscv32imac-unknown-none-elf \
+            --features=direct-vectoring,interrupt-preemption,has-mie-mip,zero-bss,zero-rtc-fast-bss,init-data,init-rw-text,init-rtc-fast-data,init-rtc-fast-text
       # Ensure documentation can be built
       - name: rustdoc
         run: cd esp-riscv-rt/ && cargo doc
